Previous crashed the app on iOS, now trying cordova-plugin-background-task...

--- a/index.html
+++ b/index.html
@@ -146,31 +146,7 @@
 				text:'App toujours en fonction, nous vous informons des courses en cours...'
 			});
 			*/
-			// This callback will be executed every time a geolocation is recorded in the background.
-			var callbackFn = function(location) {
-				//console.log('[js] BackgroundGeoLocation callback:  ' + location.latitude + ',' + location.longitude);
-				if(hail_id!="") check_answer_open();
-				if(idcourse!="") check_answer();
-				/*
-				IMPORTANT:  You must execute the finish method here to inform the native plugin that you're finished,
-				and the background-task may be completed.  You must do this regardless if your HTTP request is successful or not.
-				IF YOU DON'T, ios will CRASH YOUR APP for spending too much time in the background.
-				*/
-				backgroundGeoLocation.finish();
-			};
-			var failureFn = function(error) {
-				alert('BackgroundGeoLocation error');
-			};
-			// BackgroundGeoLocation is highly configurable. See platform specific configuration options
-			backgroundGeoLocation.configure(callbackFn, failureFn, {
-				desiredAccuracy: 10,
-				stationaryRadius: 20,
-				distanceFilter: 30,
-				debug: true, // <-- enable this hear sounds for background-geolocation life-cycle.
-				stopOnTerminate: false, // <-- enable this to clear background location settings when the app terminates
-			});
-			// Turn ON the background-geolocation system.  The user will be tracked whenever they suspend the app.
-			backgroundGeoLocation.start();
+			backgroundtask.start(bgFunctionToRun);
 			cordova.plugins.notification.local.clearAll(function() {
 				//alert("All notifications cleared");
 			}, this);
@@ -184,6 +160,10 @@
 			if((navigator.network.connection.type == Connection.NONE) || !window.jQuery){
 				$("body").empty().append('<img src="no_network.png" width="'+screen.width+'" height="'+screen.height+'" onClick="window.location.reload()" />');
 			}
+		}
+		function bgFunctionToRun() {
+			if(hail_id!="") check_answer_open();
+			if(idcourse!="") check_answer();
 		}
 		/*
 		// Bouton menu
